made edits described in slack #organizers channel post from May 8

--- a/bootstrapping/bootstrapping.ipynb
+++ b/bootstrapping/bootstrapping.ipynb
@@ -74,7 +74,7 @@
     "# Modified by Sheila Kannappan for pedagogical purposes\n",
     "\n",
     "from astroML.stats.random import bivariate_normal\n",
-    "from astroML.utils import check_random_state\n",
+    "from sklearn.utils import check_random_state\n",
     "\n",
     "def bootstrap_correln_results(xydata, Nbootstraps, random_state=None):\n",
     "    xdata=xydata[:,0]\n",
