--- a/explorejupyternotebooks/ExploreECO.ipynb
+++ b/explorejupyternotebooks/ExploreECO.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "\n",
     "## Setup\n",
-    "If you see this file in Binder, then have already opened the file\n",
+    "If you see this file in Binder, then you have already opened the file\n",
     "\n"
    ]
   },
@@ -157,7 +157,6 @@
    "outputs": [],
    "source": [
     "fig1, axcolormstar = plt.subplots()\n",
-    "axcolormstar = plt.axes()\n",
     "#axcolormstar.plot(logmstar,urcolor,'g.')\n",
     "scatter_contour(logmstar, urcolor, threshold=20, log_counts=True, ax=axcolormstar,\n",
     "                histogram2d_args=dict(bins=20),\n",
