autoreload added and explanations clarified

--- a/bestpractices/bestpractices.ipynb
+++ b/bestpractices/bestpractices.ipynb
@@ -13,20 +13,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Note: If this notebook becomes unresponsive, try going to the top-right where it should say \"Python 3\" and re-selecting the Python 3 kernel. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# standard imports and naming conventions; uncomment as needed\n",
-    "import numpy as np              # basic numerical analysis\n",
-    "import matplotlib.pyplot as plt # plotting\n",
-    "import scipy.stats as stats     # statistical functions\n",
-    "import pdb                      # python debugger\n",
-    "import time                     # python timekeeper\n",
-    "\n",
-    "# ipython \"magic\" to enable static plot output directly to notebook\n",
-    "%matplotlib inline"
+    "# ipython \"magics\" to enable static plot output directly to notebook and automatic reimport of modified imported code\n",
+    "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -101,8 +103,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# edit the protected version of the template code outside this notebook and re-run this cell until the bugs are gone\n",
-    "%run templatecodeprotected"
+    "# copy templatecodeprotected.py to templatecodeprotected_mod.py so you can compare the original to your modified version\n",
+    "# edit templatecodeprotected_mod.py outside this notebook and re-run this cell until the bugs are gone\n",
+    "%run templatecodeprotected_mod"
    ]
   },
   {
@@ -111,27 +114,11 @@
    "source": [
     "## Task 2: Speed-Up\n",
     "\n",
-    "We don't always want to optimize code speed -- sometimes it's just not important -- but you should be in the habit of avoiding silly things that slow your code down, like unnecessary loops or math operations. Measure the time taken by the whole template code as well as smaller parts of the template code and try to find inefficiencies. When you find a slow step, ask yourself whether it could be faster, and whether it matters (is it the rate-limiting step?). For now, fix it even if it's not the rate-limiting step, just for practice. Overall, you should be able to speed up this code by about a factor of 10. Here are some tools for timing code:\n",
+    "We don't always want to optimize code speed -- sometimes it's just not important -- but you should be in the habit of avoiding silly things that slow your code down, like unnecessary loops or math operations. Measure the time taken by the whole template code as well as smaller parts of the template code and try to find inefficiencies. When you find a slow step, ask yourself whether it could be faster, and whether it matters (is it the rate-limiting step?). For now, fix it even if it's not the rate-limiting step, just for practice. Overall, you should be able to speed up this code by about a factor of 10. \n",
     "\n",
-    "* If you're working in ipython (as in this notebook), you can use the [`%time`](https://ipython.org/ipython-doc/3/interactive/magics.html#magic-time) and [`%timeit`](https://ipython.org/ipython-doc/3/interactive/magics.html#magic-timeit) magics. __You should use the protected version of the code if you want to run %timeit on it__ For example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# first make a reference copy of the protected version of the code (e.g., \"templatecodeslow.py\")\n",
-    "# edit the protected template code outside this notebook and re-run this cell until the code is faster. Use the tip in the next code block\n",
-    "%run templatecodeprotected"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* You can try using the system clock. The times you derive with the system clock will be affected by delays from unrelated processes running in the background, but the clock is still handy for obtaining multiple timestamps to identify the bottlenecks in your code. For example:\n",
+    "Here are two approaches to timing code:\n",
+    "\n",
+    "1) You can try using the system clock via the `time` module. The times you derive with the system clock will be affected by delays from unrelated processes running in the background, but the clock is still handy for obtaining multiple timestamps to identify the bottlenecks in your code. For example, *in the templatecodeprotected_mod.py file*:\n",
     "\n",
     "    ~~~\n",
     "    import numpy as np\n",
@@ -143,8 +130,18 @@
     "\n",
     "    elap_time = time.perf_counter() - init_time  # finds difference\n",
     "\n",
-    "    print(\"Time elapsed is %0.3f ms\" % (elap_time*1000))  # converts to ms\n",
-    "    ~~~"
+    "    print(\"Time elapsed after linspace and sqrt commands is %0.3f ms\" % (elap_time*1000))  # converts to ms\n",
+    "    ~~~\n",
+    "\n",
+    "2) You can try using the [`%timeit`](https://ipython.org/ipython-doc/3/interactive/magics.html#magic-timeit) magic. `%timeit` is more accurate than the `time` module, but `%timeit` can only be used to time the entire code all at once. __You will need to import the protected version of the code if you want to run %timeit on it__, but you won't need to re-import because we set the %autoreload magic in the first cell of this notebook. Therefore, put the import command in a separate cell from the cell where you run %timeit repeatedly. For example, *in this notebook*:\n",
+    "\n",
+    "    ~~~\n",
+    "    import templatecodeprotected_mod\n",
+    "    ~~~\n",
+    "\n",
+    "    ~~~\n",
+    "    %timeit -n6 -r6 templatecodeprotected_mod.main()\n",
+    "    ~~~\n"
    ]
   },
   {
@@ -153,10 +150,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# once you have edited the code to make it faster, compare the speed with the previous \"templatecodeslow.py\" version that you should have made. \n",
-    "# Sometimes in order to get this part to work, you have to go to the top-right where it should say \"Python 3\" and re-select the Python 3 kernel. \n",
-    "import templatecodeprotected\n",
-    "%timeit -n6 -r6 templatecodeprotected.main()"
+    "# Before making any changes, make a reference copy of templatecodeprotected_mod.py called \"templatecodeprotected_slow.py\" \n",
+    "# and get a baseline time (this will vary with hardware, operating system, and what else is running).\n",
+    "import templatecodeslow"
    ]
   },
   {
@@ -165,8 +161,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import templatecodeslow\n",
     "%timeit -n6 -r6 templatecodeslow.main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now edit templatecodeprotected_mod.py outside this notebook and try to figure out what parts of it take the most time.\n",
+    "# Use the time module with print statements to check elapsed times at various points.\n",
+    "%run templatecodeprotected_mod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Once you think you have made the code faster, use %timeit to check your work. \n",
+    "import templatecodeprotected_mod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit -n6 -r6 templatecodeprotected_mod.main()"
    ]
   },
   {
@@ -203,8 +228,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# clean up the template code outside this notebook and re-run this cell to make sure it still works\n",
-    "%run templatecodeprotected"
+    "# copy templatecodeprotected_mod.py to templatecodeprotected_preclean.py so you can refer to the latter to see your changes\n",
+    "# clean up templatecodeprotected_mod.py outside this notebook and re-run this cell as you do to make sure it still works\n",
+    "%run templatecodeprotected_mod"
    ]
   },
   {
@@ -223,7 +249,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load templatecodeprotected"
+    "# %load templatecodeprotected_mod\n",
+    "\"\"\"\n",
+    "This template code is intended to provide practice in debugging, speed \n",
+    "optimization, and spotting bad habits in programming. The code runs but \n",
+    "is deeply flawed. If you improve the code following all the best practices \n",
+    "you know, you'll learn something about both programming and the Central \n",
+    "Limit Theorem.\n",
+    "\n",
+    "Author: Sheila Kannappan\n",
+    "Last modified: September 2019\n",
+    "\"\"\"\n",
+    "\n",
+    "# standard imports and naming conventions; uncomment as needed\n",
+    "import numpy as np              # basic numerical analysis\n",
+    "import matplotlib.pyplot as plt # plotting\n",
+    "import scipy.stats as stats     # statistical functions\n",
+    "#import pdb                      # python debugger\n",
+    "#import time                     # python timekeeper\n",
+    "\n",
+    "def gaussfunc(xvals, mean, sigma):\n",
+    "    y = np.exp(-0.5*((((xvals-mean)/sigma)**2)))\n",
+    "    norm = 1./(sigma*np.sqrt(2. * np.pi))\n",
+    "    y = norm * y\n",
+    "    return y\n",
+    "\n",
+    "def main():\n",
+    "    U = 8. # underlying rate of gym users per hour \n",
+    "    Nct = np.array([6, 36, 216, 1296]) # typical total number of people counted (powers of 6)\n",
+    "    nhr = Nct/U # time to count this many people\n",
+    "    #labelarr = [\"count for %s hr\" % ihr for ihr in nhr]\n",
+    "    \n",
+    "    for i in range(0, len(Nct)):\n",
+    "        \n",
+    "        # plot probabilities of count values for range around mean\n",
+    "        mean = Nct[i]\n",
+    "        maxval = 2*mean\n",
+    "        xvals=np.arange(0, maxval)\n",
+    "        prob = stats.poisson.pmf(xvals, mean)\n",
+    "        plt.plot(xvals, prob, 'r', lw=3)\n",
+    "        plt.xlabel(\"count value\")\n",
+    "        plt.ylabel(\"probability\")\n",
+    "        plt.xscale(\"log\")\n",
+    "        sel = np.where(np.isclose(prob,max(prob)))\n",
+    "        sel=sel[0][0]\n",
+    "        n = xvals[sel]\n",
+    "        probval = prob[sel]\n",
+    "        label = \"count for %s hr\" % (nhr[i])\n",
+    "        plt.text(n, probval, label)\n",
+    "\n",
+    "        # plot Gaussian distribution with matching mean and sigma\n",
+    "        sigma=np.sqrt(mean)\n",
+    "        y = gaussfunc(xvals, mean, sigma)\n",
+    "        plt.plot(xvals, y, 'b')\n",
+    "        #plt.xlim([,])\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    main()\n",
+    "    plt.show()\n"
    ]
   }
  ],
